syntax = "proto3";
package poulpe;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message PoulpeIds {
    repeated int32 ids = 1;
    repeated string names = 2;
}

message StateStreamRequest {
    repeated int32 ids = 1;
    float update_period = 2;
}

message PoulpeState {
    int32 id = 1;

    int32 mode_of_operation = 2;

    repeated float actual_position = 3;
    repeated float actual_velocity = 4;
    repeated float actual_torque = 5;

    repeated float axis_sensors = 6;
    repeated float axis_sensor_zeros = 7;

    repeated float board_temperatures = 8;
    repeated float motor_temperatures = 9;

    repeated float requested_target_position = 10;
    repeated float requested_velocity_limit = 11;
    repeated float requested_torque_limit = 12;


    uint32 state = 13;
    repeated int32 error_codes = 14;
    bool compliant = 15;
    google.protobuf.Timestamp published_timestamp = 16;
}

message PoulpeStates {
    repeated PoulpeState states = 1;
}

message PoulpeCommand {
    int32 id = 1;

    google.protobuf.BoolValue compliancy = 2;
    int32 mode_of_operation = 3;
    repeated float target_position = 4;
    repeated float target_velocity = 5;
    repeated float target_torque = 6;
    repeated float velocity_limit = 7;
    repeated float torque_limit = 8;
    google.protobuf.Timestamp published_timestamp = 9;
}

message PoulpeCommands {
    repeated PoulpeCommand commands = 1;
}

service PoulpeMultiplexer {
    rpc GetPoulpeIds(google.protobuf.Empty) returns (PoulpeIds);

    rpc GetStates (StateStreamRequest) returns (stream PoulpeStates);
    rpc GetCommands (stream PoulpeCommands) returns (google.protobuf.Empty);
}